# infra-kerai

./: .deploy.sh  .gitignore  .launch.sh  CLAUDE.md  Cargo.toml  KEIRA.md  TODO.md  com.primal.kerai.plist  conversation-kerai-design.md  kerai.control
cli/: Cargo.toml
cli/src/: main.rs
fuchi/: README.md
kerai/: Cargo.toml  terminal.html
kerai/src/: case.rs  config.rs  home.rs  main.rs
migrations/: 001_oauth_tables.sql  002_dpop_key.sql  003_access_control.sql
musings/: musings-1.md  musings-2.md
plans/: 00-overview.md  01-foundation.md  08-ai-perspectives.md  10-zk-marketplace.md  11-external-economy.md  12-kerai-web.md  13-microgpt.md  14-native-currency.md  15-comment-handling.md  16-reconstruction-intelligence.md  23-stack-machine.md
postgres/: Cargo.toml  kerai.control
postgres/src/: identity.rs  schema.rs  stack.rs  workers.rs
src/: agents.rs  bootstrap.rs  bounties.rs  economy.rs  identity.rs  lib.rs  marketplace.rs  peers.rs  query.rs  schema.rs  sql.rs  swarm.rs  tasks.rs  zkp.rs
src/crdt/: mod.rs  operations.rs  signer.rs
src/functions/: status.rs  stubs.rs  wallet.rs
src/microgpt/: mod.rs  model.rs  walks.rs
src/parser/: ast_walker.rs  comment_extractor.rs  kinds.rs  mod.rs
src/repo/: mod.rs  (+4 more)
web/: Cargo.toml  Dockerfile  docker-compose.yml  terminal.html
web/frontend/: index.html  package.json  vite.config.ts
web/frontend/src/: api.ts  editor.ts  main.ts  sidebar.ts  styles.css  ws.ts
web/src/: config.rs  db.rs  main.rs
web/src/routes/: documents.rs  health.rs  mod.rs  models.rs  nodes.rs  perspectives.rs  search.rs  ws.rs
(+53 files in other folders)
