[package]
name = "kerai-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kerai-web"
path = "src/main.rs"

[dependencies]
kerai-cli = { path = "../kerai" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
